<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_name">ND940C3-Channel</string>
    <string name="notification_channel_name_description">ND940C3-Channel Description</string>

    <string name="btn_download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name">File Name</string>
    <string name="status">Status</string>
    <string name="fffffff">fffffff</string>
    <string name="ssssss">ssssss</string>
    <string name="glide">Glide</string>
    <string name="load_app">Load App</string>
    <string name="retrofit">Retrofit</string>
    <string name="please_select_file">Please select file</string>
</resources>
